@@ -464,6 +464,9 @@ connect to the icecast server.  The default is 2 seconds.
 .B description <description>
 This specifies a description of the stream.
 .TP
+.B url <url>
+This specifies a URL associated with the stream.
+.TP
 .B genre <genre>
 This specifies the genre(s) of the stream.
 .SH FILES
