@@ -9,6 +9,7 @@ ver 0.17 (2011/??/??)
 * output:
   - osx: allow user to specify other audio devices
   - raop: new output plugin
+  - shout: add possibility to set url
 
 
 ver 0.16.1 (2011/01/09)
